ocs-cluster.yaml
## SigScale OCS Cluster StatefulSet
##
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ocs
spec:
  selector:
    matchLabels:
      app: ocs
  serviceName: otp
  replicas: 3
  template:
    metadata:
      labels:
        app: ocs
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: ocs
        image: sigscale/ocs
        stdin: true
        tty: true
        ports:
        - name: epmd
          protocol: TCP
          containerPort: 4369
        - name: erl-rpc
          protocol: TCP
          containerPort: 54861
        - name: diameter-acct
          protocol: TCP
          containerPort: 3868
        - name: diameter-auth
          protocol: TCP
          containerPort: 3869
        - name: radius-auth
          protocol: UDP
          containerPort: 1812
        - name: radius-acct
          protocol: UDP
          containerPort: 1813
        - name: rest
          protocol: TCP
          containerPort: 8080
        - name: snmp
          protocol: UDP
          containerPort: 4161
        volumeMounts:
        - name: ocs-data
          mountPath: /home/otp/db
  volumeClaimTemplates:
  - metadata:
      name: ocs-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
