ocs.yaml
### ocs-init.yaml
###
### Claim a persistent disk, change owner to otp,
### initialize db, run ocs as deployment..
###
apiVersion: v1
kind: Deployment
metadata:
  name: ocs
  labels:
    app.kubernetes.io/name: ocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ocs
  template:
    metadata:
      labels:
        app.kubernetes.io/name
    spec:
      containers:
      - name: ocs
        image: sigscale/ocs
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /home/otp/db
          name: db
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: ocs-data
