diameter-ro.yaml
kind: Service
apiVersion: v1
metadata:
  name: diameter-ro
  labels:
    app.kubernetes.io/name: ocs
spec:
  selector:
    app.kubernetes.io/component: 3gpp-ocf
  ports:
  - protocol: TCP
    port: 3868
    targetPort: diameter
