ocs-rest.yaml
kind: Service
apiVersion: v1
metadata:
  name: ocs-rest
  labels:
    app.kubernetes.io/name: ocs
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: rest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
