sigscale-ocs.componenet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigscale-ocs
  labels:
    app.kubernetes.io/name: ocs
    app: sigscale-ocs
    oda.tmforum.org/componentName: sigscale-ocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ocs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ocs
        app.kubernetes.io/component: 3gpp-ocf
        app.kubernetes.io/component: rest
        app: sigscale-ocs
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: ocs
        image: sigscale/ocs
        stdin: true
        tty: true
        ports:
        - name: diameter
          protocol: TCP
          containerPort: 3868
        - name: radius
          protocol: UDP
          containerPort: 1812
        - name: radius-acct
          protocol: UDP
          containerPort: 1813
        - name: http
          protocol: TCP
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/otp/db
          name: db
      volumes:
      - name: db
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sigscale-ocs-service
  labels:
    app: sigscale-ocs
    oda.tmforum.org/componentName: sigscale-ocs
spec:
  ports:
  - port: 8080
    targetPort: http
    name: sigscale-ocs-service
  type: LoadBalancer
  selector:
    app: sigscale-ocs
