ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
   - hosts:
     - bos-catalyst-cluster.us-south.containers.appdomain.cloud
     secretName: bos-catalyst-cluster
  rules:
  - host: bos-catalyst-cluster.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: ocs-rest
          servicePort: 8080
